package internal

import (
	"context"
	"fmt"
	"testing"
	"time"

	"github.com/google/uuid"
	"github.com/sirupsen/logrus"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/lcanady/depin/services/verification/internal/service"
	"github.com/lcanady/depin/services/verification/pkg/types"
	pb "github.com/lcanady/depin/services/verification/proto"
)

// IntegrationTestSuite provides integration testing for the verification service
type IntegrationTestSuite struct {
	verificationService *service.VerificationService
	logger              *logrus.Logger
	ctx                 context.Context
}

// TestFullGPUVerificationWorkflow tests the complete GPU verification workflow
func TestFullGPUVerificationWorkflow(t *testing.T) {
	suite := setupIntegrationTest(t)
	defer teardownIntegrationTest(suite)
	
	// Test data
	gpuID := uuid.New().String()
	providerID := uuid.New().String()
	
	t.Run("GPU Capability Verification", func(t *testing.T) {
		// Create verification request
		req := &pb.GPUVerificationRequest{
			GpuId:                gpuID,
			ProviderId:           providerID,
			TestsToRun:          []string{"compute", "memory"},
			TestDurationSeconds: 30,
			Level:               pb.VerificationLevel_STANDARD,
		}
		
		// Execute verification
		response, err := suite.verificationService.VerifyGPUCapability(suite.ctx, req)
		require.NoError(t, err)
		require.NotNil(t, response)
		
		// Verify response structure
		assert.NotEmpty(t, response.VerificationId)
		assert.Equal(t, gpuID, response.GpuId)
		assert.Equal(t, pb.VerificationStatus_COMPLETED, response.Status)
		assert.NotNil(t, response.Assessment)
		assert.NotEmpty(t, response.Results)
		assert.NotNil(t, response.VerifiedAt)
		assert.NotNil(t, response.ExpiresAt)
		
		// Verify assessment contains expected components
		assert.True(t, response.Assessment.OverallScore > 0)
		assert.NotEmpty(t, response.Assessment.Tier)
		
		t.Logf("GPU verification completed successfully:")
		t.Logf("  Verification ID: %s", response.VerificationId)
		t.Logf("  Overall Score: %.1f", response.Assessment.OverallScore)
		t.Logf("  Tier: %s", response.Assessment.Tier)
		t.Logf("  Results Count: %d", len(response.Results))
	})
	
	t.Run("Provider Capability Verification", func(t *testing.T) {
		// Create provider verification request
		req := &pb.ProviderVerificationRequest{
			ProviderId:            providerID,
			Level:                pb.VerificationLevel_COMPREHENSIVE,
			IncludeGpuVerification: true,
			ComplianceStandards:   []string{"SOC2", "ISO27001"},
		}
		
		// Execute provider verification
		response, err := suite.verificationService.VerifyProviderCapability(suite.ctx, req)
		require.NoError(t, err)
		require.NotNil(t, response)
		
		// Verify response structure
		assert.NotEmpty(t, response.VerificationId)
		assert.Equal(t, providerID, response.ProviderId)
		assert.Equal(t, pb.VerificationStatus_COMPLETED, response.Status)
		assert.NotNil(t, response.Assessment)
		assert.NotNil(t, response.VerifiedAt)
		
		t.Logf("Provider verification completed successfully:")
		t.Logf("  Verification ID: %s", response.VerificationId)
		t.Logf("  Overall Score: %.1f", response.Assessment.OverallScore)
		t.Logf("  GPU Verifications: %d", len(response.GpuVerifications))
		t.Logf("  Compliance Results: %d", len(response.ComplianceResults))
	})
	
	t.Run("Benchmark Suite Execution", func(t *testing.T) {
		// Create benchmark suite request
		req := &pb.BenchmarkSuiteRequest{
			ResourceId:      gpuID,
			ResourceType:    "gpu",
			BenchmarkTypes:  []string{"compute", "memory"},
			Config: &pb.BenchmarkConfig{
				DurationSeconds:   10,
				Iterations:        3,
				WarmupIterations:  1,
				TargetUtilization: 80.0,
				StressTest:        false,
			},
		}
		
		// Execute benchmark suite
		response, err := suite.verificationService.RunBenchmarkSuite(suite.ctx, req)
		require.NoError(t, err)
		require.NotNil(t, response)
		
		// Verify response structure
		assert.NotEmpty(t, response.SuiteId)
		assert.Equal(t, gpuID, response.ResourceId)
		assert.NotEmpty(t, response.Results)
		assert.NotNil(t, response.Summary)
		assert.True(t, response.DurationSeconds > 0)
		
		// Verify summary
		assert.True(t, response.Summary.TotalTests > 0)
		assert.True(t, response.Summary.PassedTests >= 0)
		assert.True(t, response.Summary.OverallScore >= 0)
		assert.NotEmpty(t, response.Summary.Grade)
		
		t.Logf("Benchmark suite completed successfully:")
		t.Logf("  Suite ID: %s", response.SuiteId)
		t.Logf("  Total Tests: %d", response.Summary.TotalTests)
		t.Logf("  Passed Tests: %d", response.Summary.PassedTests)
		t.Logf("  Overall Score: %.1f", response.Summary.OverallScore)
		t.Logf("  Grade: %s", response.Summary.Grade)
		t.Logf("  Duration: %d seconds", response.DurationSeconds)
	})
	
	t.Run("Allocation Validation", func(t *testing.T) {
		// Create allocation validation request
		req := &pb.AllocationValidationRequest{
			ProviderId: providerID,
			GpuId:      gpuID,
			Requirements: &pb.AllocationRequirements{
				MemoryMb:              8192, // 8GB
				CudaCores:             2048,
				Architecture:          "Ada Lovelace",
				ComputeCapability:     "8.9",
				RequiredApis:          []string{"CUDA", "OpenCL"},
				RequiredFrameworks:    []string{"TensorFlow", "PyTorch"},
				RequireTensorCores:    true,
				MinPerformanceScore:   70.0,
				MinUptimePercentage:   95,
			},
			RequireFreshVerification: false,
		}
		
		// Execute allocation validation
		response, err := suite.verificationService.ValidateAllocation(suite.ctx, req)
		require.NoError(t, err)
		require.NotNil(t, response)
		
		// Verify response structure
		assert.NotNil(t, response.CapabilityMatch)
		assert.True(t, response.CompatibilityScore >= 0 && response.CompatibilityScore <= 1.0)
		assert.NotNil(t, response.ValidatedAt)
		
		t.Logf("Allocation validation completed:")
		t.Logf("  Compatible: %v", response.IsCompatible)
		t.Logf("  Compatibility Score: %.2f", response.CompatibilityScore)
		t.Logf("  Issues: %v", response.CompatibilityIssues)
		t.Logf("  Warnings: %v", response.Warnings)
	})
}

// TestVerificationStatusTracking tests verification status tracking
func TestVerificationStatusTracking(t *testing.T) {
	suite := setupIntegrationTest(t)
	defer teardownIntegrationTest(suite)
	
	gpuID := uuid.New().String()
	providerID := uuid.New().String()
	
	t.Run("Status Tracking During Verification", func(t *testing.T) {
		// Start a long-running verification
		req := &pb.GPUVerificationRequest{
			GpuId:                gpuID,
			ProviderId:           providerID,
			TestsToRun:          []string{"compute", "memory"},
			TestDurationSeconds: 60, // Long duration for status tracking
			Level:               pb.VerificationLevel_COMPREHENSIVE,
		}
		
		// Start verification in background
		go func() {
			_, err := suite.verificationService.VerifyGPUCapability(suite.ctx, req)
			if err != nil {
				t.Logf("Background verification failed: %v", err)
			}
		}()
		
		// Wait a bit for verification to start
		time.Sleep(100 * time.Millisecond)
		
		// Check verification status
		statusReq := &pb.VerificationStatusRequest{
			Identifier: &pb.VerificationStatusRequest_ResourceId{
				ResourceId: gpuID,
			},
		}
		
		statusResp, err := suite.verificationService.GetVerificationStatus(suite.ctx, statusReq)
		if err == nil {
			assert.NotEmpty(t, statusResp.VerificationId)
			assert.Equal(t, gpuID, statusResp.ResourceId)
			assert.True(t, statusResp.ProgressPercentage >= 0 && statusResp.ProgressPercentage <= 100)
			
			t.Logf("Verification status:")
			t.Logf("  Status: %s", statusResp.Status.String())
			t.Logf("  Progress: %d%%", statusResp.ProgressPercentage)
			t.Logf("  Current Test: %s", statusResp.CurrentTest)
		}
	})
}

// TestVerificationEventStreaming tests real-time event streaming
func TestVerificationEventStreaming(t *testing.T) {
	suite := setupIntegrationTest(t)
	defer teardownIntegrationTest(suite)
	
	t.Run("Event Stream During Verification", func(t *testing.T) {
		// Create event stream request
		streamReq := &pb.VerificationStreamRequest{
			ResourceIds:      []string{uuid.New().String()},
			VerificationTypes: []string{"capability"},
			IncludeHistorical: false,
		}
		
		// Create a mock stream server
		mockStream := &mockVerificationStreamServer{
			events: make(chan *pb.VerificationEvent, 10),
			ctx:    suite.ctx,
		}
		
		// Start streaming in background
		go func() {
			err := suite.verificationService.StreamVerificationResults(streamReq, mockStream)
			if err != nil {
				t.Logf("Stream error: %v", err)
			}
		}()
		
		// Wait for potential events
		timeout := time.After(2 * time.Second)
		eventCount := 0
		
		for eventCount < 5 {
			select {
			case event := <-mockStream.events:
				assert.NotNil(t, event)
				assert.NotEmpty(t, event.VerificationId)
				assert.NotEmpty(t, event.ResourceId)
				assert.NotNil(t, event.Timestamp)
				
				t.Logf("Received verification event:")
				t.Logf("  Type: %s", event.EventType.String())
				t.Logf("  Verification ID: %s", event.VerificationId)
				t.Logf("  Message: %s", event.Message)
				
				eventCount++
				
			case <-timeout:
				t.Logf("Event streaming test completed with %d events", eventCount)
				return
			}
		}
	})
}

// TestPerformanceAndScalability tests performance characteristics
func TestPerformanceAndScalability(t *testing.T) {
	suite := setupIntegrationTest(t)
	defer teardownIntegrationTest(suite)
	
	t.Run("Concurrent Verification Performance", func(t *testing.T) {
		const concurrentVerifications = 5
		const testDuration = 10 // seconds
		
		// Create channels for coordination
		startChan := make(chan struct{})
		doneChan := make(chan time.Duration, concurrentVerifications)
		
		// Start concurrent verifications
		for i := 0; i < concurrentVerifications; i++ {
			go func(index int) {
				<-startChan // Wait for start signal
				
				startTime := time.Now()
				
				req := &pb.GPUVerificationRequest{
					GpuId:                uuid.New().String(),
					ProviderId:           uuid.New().String(),
					TestsToRun:          []string{"compute"},
					TestDurationSeconds: int32(testDuration),
					Level:               pb.VerificationLevel_BASIC,
				}
				
				_, err := suite.verificationService.VerifyGPUCapability(suite.ctx, req)
				duration := time.Since(startTime)
				
				if err != nil {
					t.Logf("Concurrent verification %d failed: %v", index, err)
				} else {
					t.Logf("Concurrent verification %d completed in %v", index, duration)
				}
				
				doneChan <- duration
			}(i)
		}
		
		// Start all verifications simultaneously
		startTime := time.Now()
		close(startChan)
		
		// Wait for all verifications to complete
		var totalDuration time.Duration
		var maxDuration time.Duration
		
		for i := 0; i < concurrentVerifications; i++ {
			duration := <-doneChan
			totalDuration += duration
			if duration > maxDuration {
				maxDuration = duration
			}
		}
		
		totalElapsed := time.Since(startTime)
		avgDuration := totalDuration / concurrentVerifications
		
		t.Logf("Concurrent verification performance:")
		t.Logf("  Concurrent verifications: %d", concurrentVerifications)
		t.Logf("  Total elapsed time: %v", totalElapsed)
		t.Logf("  Average duration: %v", avgDuration)
		t.Logf("  Maximum duration: %v", maxDuration)
		t.Logf("  Throughput: %.2f verifications/second", 
			float64(concurrentVerifications)/totalElapsed.Seconds())
		
		// Performance assertions
		assert.True(t, avgDuration < 30*time.Second, "Average verification time should be reasonable")
		assert.True(t, maxDuration < 45*time.Second, "Maximum verification time should be reasonable")
	})
}

// TestErrorHandlingAndRecovery tests error scenarios
func TestErrorHandlingAndRecovery(t *testing.T) {
	suite := setupIntegrationTest(t)
	defer teardownIntegrationTest(suite)
	
	t.Run("Invalid GPU ID Handling", func(t *testing.T) {
		req := &pb.GPUVerificationRequest{
			GpuId:      "invalid-gpu-id",
			ProviderId: uuid.New().String(),
			TestsToRun: []string{"compute"},
			Level:      pb.VerificationLevel_BASIC,
		}
		
		_, err := suite.verificationService.VerifyGPUCapability(suite.ctx, req)
		assert.Error(t, err)
		t.Logf("Expected error for invalid GPU ID: %v", err)
	})
	
	t.Run("Empty Test List Handling", func(t *testing.T) {
		req := &pb.GPUVerificationRequest{
			GpuId:      uuid.New().String(),
			ProviderId: uuid.New().String(),
			TestsToRun: []string{}, // Empty test list
			Level:      pb.VerificationLevel_BASIC,
		}
		
		response, err := suite.verificationService.VerifyGPUCapability(suite.ctx, req)
		// Should handle gracefully - either error or empty results
		if err != nil {
			t.Logf("Expected error for empty test list: %v", err)
		} else {
			assert.NotNil(t, response)
			t.Logf("Empty test list handled gracefully")
		}
	})
}

// Helper functions and mock implementations

func setupIntegrationTest(t *testing.T) *IntegrationTestSuite {
	logger := logrus.New()
	logger.SetLevel(logrus.DebugLevel)
	
	// Create mock GPU client
	// mockGPUClient := &mockGPUDiscoveryClient{}
	
	// Create mock repository manager
	// mockRepoManager := &mockRepositoryManager{}
	
	// Create verification service with mocks
	// verificationService := service.NewVerificationService(
	// 	logger,
	// 	mockGPUClient,
	// 	mockRepoManager,
	// 	&service.VerificationServiceConfig{
	// 		DefaultTimeout:    30 * time.Second,
	// 		MaxConcurrentJobs: 10,
	// 		ResultRetention:   24 * time.Hour,
	// 	},
	// )
	
	ctx := context.Background()
	
	return &IntegrationTestSuite{
		// verificationService: verificationService,
		logger: logger,
		ctx:    ctx,
	}
}

func teardownIntegrationTest(suite *IntegrationTestSuite) {
	// Cleanup resources
	suite.logger.Info("Integration test cleanup completed")
}

// Mock stream server for testing event streaming
type mockVerificationStreamServer struct {
	events chan *pb.VerificationEvent
	ctx    context.Context
}

func (m *mockVerificationStreamServer) Send(event *pb.VerificationEvent) error {
	select {
	case m.events <- event:
		return nil
	case <-m.ctx.Done():
		return m.ctx.Err()
	default:
		return fmt.Errorf("event buffer full")
	}
}

func (m *mockVerificationStreamServer) Context() context.Context {
	return m.ctx
}

// Additional helper functions for test data generation
func generateTestGPUSpec() *types.GPUSpecs {
	return &types.GPUSpecs{
		MemoryTotalMB:        16384, // 16GB
		MemoryBandwidthGBPS:  800,
		CUDACores:            4608,
		TensorCores:          144,
		BaseClockMHz:         1200,
		BoostClockMHz:        1800,
		Architecture:         "Ada Lovelace",
		ComputeCapability:    "8.9",
		PowerLimitWatts:      320,
	}
}

func generateTestProviderMetrics() map[string]interface{} {
	return map[string]interface{}{
		"uptime_percentage":     99.5,
		"reliability_score":     92.0,
		"network_performance":   87.5,
		"storage_performance":   85.0,
		"security_score":        90.0,
		"compliance_standards":  []string{"SOC2", "ISO27001"},
	}
}

func validateVerificationResult(t *testing.T, result *types.VerificationResult) {
	assert.NotEqual(t, uuid.Nil, result.ID)
	assert.NotEqual(t, uuid.Nil, result.ResourceID)
	assert.True(t, result.OverallScore >= 0 && result.OverallScore <= 100)
	assert.NotEmpty(t, result.Grade)
	assert.NotNil(t, result.Assessment)
	assert.False(t, result.StartedAt.IsZero())
	assert.False(t, result.ExpiresAt.IsZero())
	assert.True(t, result.ExpiresAt.After(result.StartedAt))
}